get rid of product hero, fix h1 spacing

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -75,7 +75,7 @@
 
 h1.brimm-blocks--justified-header,
 .brimm-blocks--heading-l {
-  font-size: clamp(4rem, 8vw, 140px);
+  font-size: clamp(4rem, 8vw, 130px);
 }
 
 .brimm-blocks--heading-l {
